hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_non_arraykey_keys.php.exp
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 10-31:
Invalid index type for this darray (Typing[4110])
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 17-20:
This is an array key (int/string) because only array keys can be used to index into a Map, dict, darray, Set, or keyset
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 20-21:
It is incompatible with a value of generic type Tk
